k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogserver
spec:
  selector:
    matchLabels:
      app: catalogserver
  template:
    metadata:
      labels:
        app: catalogserver
    spec:
      containers:
      - image: deni1688/catalogserver:latest
        name: catalogserver
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
