k8s/productclient-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  labels:
    io.kompose.network/kubestore-net: "true"
    io.kompose.service: productclient
  name: productclient
spec:
  containers:
    - image: deni1688/pui:latest
      name: productclient
      ports:
        - containerPort: 80
      resources: {}
  restartPolicy: OnFailure
