k8s/warehouse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouseserver
spec:
  selector:
    matchLabels:
      app: warehouseserver
  template:
    metadata:
      labels:
        app: warehouseserver
    spec:
      containers:
      - image: deni1688/warehouseserver:latest
        name: warehouseserver
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
