k8s/warehouseserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  labels:
    io.kompose.network/kubestore-net: "true"
    io.kompose.service: warehouseserver
  name: warehouseserver
spec:
  containers:
    - env:
        - name: RABBIT-MQ-URI
          value: rabbitmq
      image: deni1688/warehouseserver:latest
      name: warehouseserver
      resources: {}
  restartPolicy: OnFailure
