k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productclient
spec:
  selector:
    matchLabels:
      app: productclient
  template:
    metadata:
      labels:
        app: productclient
    spec:
      containers:
      - image: deni1688/pui:latest
        name: productclient
        resources: {}
        imagePullPolicy: Always
        ports:
          - containerPort: 80
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: productclient-service
spec:
  selector:
    app: productclient
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8877
    targetPort: 80
    nodePort: 30000
