k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongostore
  labels:
    app: mongostore
spec:
  replicas: 1
  template:
    metadata:
      name: mongostore
      labels:
        app: mongostore
    spec:
      containers:
        - name: mongostore
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
      restartPolicy: Always
  selector:
    matchLabels:
      app: mongostore

---

apiVersion: v1
kind: Service
metadata:
  name: mongostore-service
spec:
  selector:
    app: mongostore
  ports:
    - port: 27017
