k8s/publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisherserver
spec:
  selector:
    matchLabels:
      app: publisherserver
  template:
    metadata:
      labels:
        app: publisherserver
    spec:
      containers:
      - image: deni1688/publisherserver:latest
        name: publisherserver
        resources: {}
        imagePullPolicy: Always
        ports:
          - containerPort: 8888
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: publisherserver-service
spec:
  selector:
    app: publisherserver
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
