k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: rabbitmq:management-alpine
        resources: {}
        name: rabbitmq
        ports:
          - containerPort: 5672
          - containerPort: 15672
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-broker-service
spec:
  selector:
    app: rabbitmq
  ports:
  - name: "5672"
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: "15672"
    protocol: TCP
    port: 15672
    targetPort: 15672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management-service
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    port: 15672
    targetPort: 15672
