k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubestore-ingress
  labels:
    name: kubestore-ingress
spec:
  tls:
  - hosts:
      - kubestore.de
    secretName: kubestore-tls
  rules:
  - host: kubestore.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: productclient-service 
            port: 
              number: 8877
      - pathType: Prefix
        path: "/products"
        backend:
          service:
            name: adminserver-service 
            port: 
              number: 8888
