k8s/kubestore_net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubestore-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/kubestore-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/kubestore-net: "true"
